tests/bad/assign_to_lvalue.ae
/// fail: Must be an l-value

def main() {
    5 + 1 = 4
}